# django-nfctags

./: .gitignore  LICENSE  README.rst  pyproject.toml
django_nfctags.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nfctags/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py  validators.py  views.py
nfctags/migrations/: 0001_initial.py
