[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-nfctags"
version = "0.1.0"
description = "A Django app to integrate NFC Tags with a web app."
authors = [
    {name = "Rafael Puello", email = "rafael.e.puello@gmail.com"},
]
readme = "README.rst"
license = { file = "LICENSE" }
requires-python = ">=3.12"

keywords = ["django", "nfc", "nfc-tag"]

dependencies = [
    "django>=5.1",
]

classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://digidex.tech/projects"
Documentation = "https://digidex.tech/django-nfctags"
Repository = "https://digidex.tech/RafaelPuello/django-nfctags"